@@ -37,7 +37,6 @@ SOURCES += main.cpp \
     filter/cropping/croppingwidget.cpp \
     filter/cropping/croppinggraphicsview.cpp \
     filter/cropping/croppingcorner.cpp \
-    imagelistwidget.cpp \
     filter/dekeystoning/dekeystoningline.cpp \
     filter/dekeystoning/dekeystoningcorner.cpp \
     imagetablewidget.cpp
@@ -56,7 +55,6 @@ HEADERS += mainwindow.h \
     filter/cropping/croppingwidget.h \
     filter/cropping/croppinggraphicsview.h \
     filter/cropping/croppingcorner.h \
-    imagelistwidget.h \
     filter/dekeystoning/dekeystoningline.h \
     filter/dekeystoning/dekeystoningcorner.h \
     imagetablewidget.h
@@ -65,7 +63,6 @@ FORMS += mainwindow.ui \
     filter/dekeystoning/dekeystoningwidget.ui \
     filter/rotation/rotationwidget.ui \
     filter/cropping/croppingwidget.ui \
-    imagelistwidget.ui \
     imagetablewidget.ui
 INCLUDEPATH += filter \
     filter/dekeystoning \
